# koi

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/networking/: Cargo.toml
crates/networking/src/: connection.rs  lib.rs  message.rs  packet.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  message_handler.rs  message_type.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
