[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
networking = { version = "0.1.0", path = "../networking" }
protocol = { version = "0.1.0", path = "../protocol" }

[dependencies.tokio]
version = "1.36.0"
features = ["net", "rt", "rt-multi-thread", "io-std", "io-util", "macros"]
